<resources>
    <string name="app_name">EPFO PORTAL</string>
    <string name="app_name_">EPFO ALL IN ONE PORTAL</string>

    <!--BackGround-->
    <string name="desktop_view">String newUA= "Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.0.4) Gecko/20100101 Firefox/4.0";</string>

    <!--ADVERTISEMENT Testing-->
    <!--<string name="admob_app_id">ca-app-pub-3940256099942544</string>-->
    <!--<string name="banner">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--<string name="banner1">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--<string name="banner2">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--<string name="interstitial_test">ca-app-pub-3940256099942544/1033173712</string>-->

    <!--<string name="banner3">ca-app-pub-3940256099942544/6300978111</string>-->

    <!--ADVERTISEMENT IMPLEMENTATION-->
    <string name="admob_app_id">ca-app-pub-2485607748962892~9437356220</string>
    <string name="banner">ca-app-pub-2485607748962892/9839421726</string>
    <string name="banner1">ca-app-pub-2485607748962892/1143933233</string>
    <string name="banner2">ca-app-pub-2485607748962892/1403131142</string>
    <string name="interstitial_test">ca-app-pub-2485607748962892/1306325587</string>

    <!--<string name="banner3">ca-app-pub-2485607748962892/7864597717</string>-->

    <!--WEBSITES-->
    <string name="a_epfo_passbook">https://passbook.epfindia.gov.in/MemberPassBook/Login.jsp</string>
    <string name="b_epfo_uan">https://unifiedportal-mem.epfindia.gov.in/memberinterface/</string>
    <string name="c_epfo_unified_portal">https://unifiedportal-emp.epfindia.gov.in/epfo/</string>
    <string name="d_epfo_ecr_return_payment">https://unifiedportal-emp.epfindia.gov.in/epfo/</string>
    <string name="e_epfo_kyc_update">https://unifiedportal-mem.epfindia.gov.in/memberinterface/</string>
    <string name="f_epfo_ekyc_portal">https://iwu.epfindia.gov.in/eKYC/</string>
    <string name="g_epfo_uan_aadhar_allotment">https://unifiedportal-mem.epfindia.gov.in/memberinterface/no-auth/citizenRegistration/viewRegistraton</string>
    <string name="h_epfo_shram_suvidha_common_esr_epfo_esic">https://registration.shramsuvidha.gov.in/user/login</string>
    <string name="i_epfo_establishment_registration">https://registration.shramsuvidha.gov.in/user/login</string>
    <string name="j_epfo_uan_activation">https://unifiedportal-mem.epfindia.gov.in/memberinterface/</string>
    <string name="k_epfo_uan_status">https://unifiedportal-mem.epfindia.gov.in/memberinterface/</string>
    <string name="l_epfo_online_claims_member_account_transfer">https://unifiedportal-mem.epfindia.gov.in/memberinterface/</string>

    <!--BUTTON NAMES-->
    <string name="item1">EPFO PASSBOOK</string>
    <string name="item2">EPFO UAN</string>
    <string name="item3">EPFO UNIFIED PORTAL</string>
    <string name="item4">ECR/RETURNS/PAYMENT</string>
    <string name="item5">EPFO KYC UPDATE</string>
    <string name="item6">EPFO EKYC PORTAL</string>
    <string name="item7">DIRECT UAN ALLOTMENT USING AADHAR</string>
    <string name="item8">SHRAM SUVIDHA COMMON ECR (EPFO/ESIC)</string>
    <string name="item9">ESTABLISHMENT REGISTRATION</string>
    <string name="item10">EPFO UAN ACTIVATION</string>
    <string name="item11">EPFO UAN STATUS</string>
    <string name="item12">ONLINE CLAIMS MEMBER ACCOUNT TRANSFER</string>
    <string name="invitation_title">Can you access EPFO services with the click of a button??</string>
    <string name="invitation_message">If not download this app..click this link https://play.google.com/store/apps/details?id=com.devannexe.epfo</string>

</resources>
