<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_pic_1024_1"
    android:orientation="vertical"
    tools:context=".portal_activity">

    <RelativeLayout
        android:id="@+id/epfo_header"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/epfo_portal"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-condensed"
            android:lineSpacingExtra="8sp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="35sp"
            android:textStyle="bold"
            android:typeface="sans"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/share"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="@android:drawable/ic_menu_share"
            android:onClick="onClick" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        ads:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/epfo_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/item1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingExtra="8sp"
                android:onClick="onClick"
                android:text="@string/item1"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/holo_green_light"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:typeface="sans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/item2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingExtra="8sp"
                android:onClick="onClick"
                android:text="@string/item2"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/holo_green_light"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="@+id/item1"
                tools:text="@string/item2" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_gravity="bottom"
                android:foregroundGravity="bottom"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner1"
                app:layout_constraintStart_toStartOf="@+id/item2" />

            <Button
                android:id="@+id/item3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingExtra="8sp"
                android:onClick="onClick"
                android:text="@string/item3"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/holo_green_light"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="@+id/adView1"
                tools:text="@string/item3" />

            <Button
                android:id="@+id/item4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingExtra="8sp"
                android:onClick="onClick"
                android:text="@string/item4"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/holo_green_light"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="@+id/item3"
                tools:text="@string/item4" />

            <Button
                android:id="@+id/item5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingExtra="8sp"
                android:onClick="onClick"
                android:text="@string/item5"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/holo_green_light"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="@+id/item4"
                tools:text="@string/item5" />

            <Button
                android:id="@+id/item6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingExtra="8sp"
                android:onClick="onClick"
                android:text="@string/item6"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/holo_green_light"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="@+id/item5"
                tools:text="@string/item6" />

            <Button
                android:id="@+id/item7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingExtra="8sp"
                android:onClick="onClick"
                android:text="@string/item7"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/holo_green_light"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="@+id/item6"
                tools:text="@string/item7" />

            <Button
                android:id="@+id/item8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingExtra="8sp"
                android:onClick="onClick"
                android:text="@string/item8"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/holo_green_light"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="@+id/item7"
                tools:text="@string/item8" />

            <Button
                android:id="@+id/item9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingExtra="8sp"
                android:onClick="onClick"
                android:text="@string/item9"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/holo_green_light"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="@+id/item8"
                tools:text="@string/item9" />

            <Button
                android:id="@+id/item10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingExtra="8sp"
                android:onClick="onClick"
                android:text="@string/item10"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/holo_green_light"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="@+id/item9"
                tools:text="@string/item10" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_gravity="bottom"
                android:foregroundGravity="bottom"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner2"
                app:layout_constraintStart_toStartOf="@+id/item10" />

            <Button
                android:id="@+id/item11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingExtra="8sp"
                android:onClick="onClick"
                android:text="@string/item11"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/holo_green_light"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="@+id/adView2"
                tools:text="@string/item11" />

            <Button
                android:id="@+id/item12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingExtra="8sp"
                android:onClick="onClick"
                android:text="@string/item12"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/holo_green_light"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="@+id/item11"
                tools:text="@string/item12" />

            <!--<com.google.android.gms.ads.AdView-->
                <!--android:id="@+id/adView3"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="bottom"-->
                <!--android:foregroundGravity="bottom"-->
                <!--ads:adSize="BANNER"-->
                <!--ads:adUnitId="@string/banner3"-->
                <!--app:layout_constraintStart_toStartOf="@+id/item12" />-->

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>